--- a/.anvil_editor.yaml
+++ b/.anvil_editor.yaml
@@ -5,6 +5,7 @@ unique_ids:
     admin.dashboard.lenders.view_profile_copy: '1700738331006824314442804.7479'
     admin.dashboard.loan_management.default_loans.RowTemplate19: '1701349303616984574618128.7532'
     borrower_registration_form.borrower_dashboard.new_loan_request.check: '1704862173565146195326035.07346'
+    lendor_registration_form.dashboard.change_password: '1699967346365452645084641.901'
     admin.dashboard.manage_settings: '1699528731095179009819656.96207'
     borrower_registration_form.star_1_borrower_registration_form_begin_5: '1698915753108355686900352.70654'
     lendor_registration_form.Lender_reg_Institutional_form_5: '1699430377713576071178309.6973'
@@ -24,7 +25,6 @@ unique_ids:
     wallet.wallet: '1703489007387496965863254.889'
     lendor_registration_form.Lender_reg_form_2: '1699426727342910603650280.5131'
     borrower_registration_form.borrower_dashboard.new_loan_request: '1698662158540530088363841.0887'
-    lendor_registration_form.dashboard.avlbal: '1699960014867483301520306.9306'
     borrower_registration_form.borrower_dashboard.application_tracker.RowTemplate26: '1704699099052678345492761.1499'
     admin.dashboard.manage_reports: '1699528696451136679061767.8162'
     admin.user_issue.user_buganalysis.RowTemplate17: '1701189107287981500115093.1753'
@@ -33,11 +33,9 @@ unique_ids:
     lendor_registration_form.Lender_reg_form_4: '1700038033302654577889349.2847'
     borrower_registration_form.star_1_borrower_registration_form_begin_8: '1700161372617325052945266.5503'
     borrower_registration_form.borrower_dashboard.application_tracker: '1698927021026141533584098.39868'
-    lendor_registration_form.dashboard.cp: '1699967346365452645084641.901'
     admin.dashboard.manage_settings.manage_facts: '1699529264900376484216542.50616'
     admin.dashboard: '1699523403306752264878574.3744'
     admin.dashboard.loan_management.open_loans.RowTemplate13: '1701079025496570111432574.5491'
-    lendor_registration_form.dashboard.td: '1699961512859170838739966.79565'
     lendor_registration_form.dashboard.lender_view_loans.RowTemplate24: '1703182023237906200953522.0261'
     borrower_registration_form.borrower_dashboard.borrower_today_dues.RowTemplate17: '1701228481896128428300127.09094'
     wallet.wallet.ItemTemplate1: '1703492569011195703115231.62308'
@@ -54,11 +52,13 @@ unique_ids:
     ? borrower_registration_form.star_1_borrower_registration_form_begin_3.star_1_borrower_registration_form_begin_3b_business_3.star_1_borrower_registration_form_begin_3b_business_4
     : '1700571978274780031857795.3887'
     borrower_registration_form.borrower_dashboard.borrower_foreclosure_request.borrower_foreclosure.foreclose: '1700730776806358375111007.35254'
+    lendor_registration_form.dashboard.today_dues.View_Details: '170356566713748309638072.5887'
     borrower_registration_form.borrower_dashboard.borrower_profile: '1698653519986110665503267.72595'
     admin.dashboard.lenders.view_profile_copy.edit_form_copy: '1700738442974165215211725.12378'
     lendor_registration_form.Toggleswitch: '1701335189405602120940903.774'
     lendor_registration_form.dashboard.vblr.Borr_loan_request: '1700542763128106365112272.9714'
     admin.dashboard.admin_teams.view_profile.update_form: '169952839624818688697299.6676'
+    lendor_registration_form.dashboard.today_dues.ItemTemplate1: '1703564885286922717800272.7809'
     borrower_registration_form.borrower_dashboard.application_tracker.view_profile: '1701144654092613273531448.6368'
     borrower_registration_form.star_1_borrower_registration_form_begin_6: '1698917728035780761604535.7333'
     bank_users.main_form.RowTemplate12: '1700563368307555313567841.8457'
@@ -67,7 +67,6 @@ unique_ids:
     lendor_registration_form.Lender_reg_Institutional_form_1: '1699429830924916000307655.0148'
     borrower_registration_form.star_1_borrower_registration_form_begin_3.star_1_borrower_registration_form_begin_3d: '1700037370196273229157101.42648'
     admin.dashboard.loan_management.default_loans: '1701349219800657114662317.6571'
-    lendor_registration_form.dashboard.td.View_Details: '170356566713748309638072.5887'
     wallet.wallet.all_transaction.RowTemplate29: '1704884931461492157927200.2286'
     lendor_registration_form.dashboard.edit_profile: '1701093412433606982932624.6844'
     borrower_registration_form.borrower_dashboard.borrower_view_loans.RowTemplate15: '1701149147768679142681951.7627'
@@ -75,7 +74,6 @@ unique_ids:
     admin.dashboard.loan_management.loan_disbursed.view_profile_6: '1704878672712960872612311.6324'
     borrower_registration_form.borrower_dashboard.new_loan_request.check.RowTemplate27: '1704862271764988530792732.8186'
     bank_users.main_form.career_main_form: '1700563797991728540622095.9799'
-    lendor_registration_form.dashboard.td.ItemTemplate1: '1703564885286922717800272.7809'
     admin.dashboard.loan_management.closed_loans.RowTemplate14: '1701079863491503664452804.4547'
     bank_users.main_form.products_main_form: '1700563558734712481921773.0997'
     lendor_registration_form.dashboard.vlo.RowTemplate34: '1704968592298956121945816.4596'
@@ -105,7 +103,6 @@ unique_ids:
     admin.dashboard.loan_management.rejected_loans: '1699528958889169021462649.09222'
     admin.dashboard.loan_management.rejected_loans.view_profile_2: '1700812221243295088415002.8101'
     admin.dashboard.loan_management.approved_loans.view_profile: '1700740546893987573171578.3491'
-    lendor_registration_form.dashboard.rta: '1699957883953144866963289.06934'
     ? borrower_registration_form.star_1_borrower_registration_form_begin_3.star_1_borrower_registration_form_begin_3b_business_3.star_1_borrower_registration_form_begin_3b_business_2
     : '1700570068782198167271670.87088'
     admin.dashboard.loan_management.loan_disbursed: '1701159817062849579236397.6018'
@@ -121,14 +118,16 @@ unique_ids:
     lendor_registration_form.dashboard.vlfr.foreclose_details: '1700454637827919052628054.0963'
     lendor_registration_form.Lender_reg_form_3: '1699427114774355019321073.1847'
     admin.user_issue.user_viewprofile: '1701187753190491873666760.6118'
+    lendor_registration_form.dashboard.view_opening_balance: '1699956535223911918554378.0013'
+    lendor_registration_form.dashboard.top_up_amount: '1699957883953144866963289.06934'
     lendor_registration_form.Lender_reg_individual_form_3: '1699429299471944361321501.9009'
     lendor_registration_form.Lender_reg_bankdirect_bank_form_2: '1699429556412724511736888.3689'
     admin.dashboard.manage_products.view_product: '1700713112442254456792559.71744'
     admin.dashboard.loan_management.closed_loans: '1699528886441906086843573.9337'
+    lendor_registration_form.dashboard.today_dues: '1699961512859170838739966.79565'
     lendor_registration_form.dashboard.vsn: '1699967294797596075787674.3921'
     lendor_registration_form.dashboard.vlo: '1699961316448706281090869.9006'
     borrower_registration_form.star_1_borrower_registration_form_begin_3.star_1_borrower_registration_form_begin_3b_business_3: '1700126739765126145778650.8795'
-    lendor_registration_form.dashboard.ld: '1699960450618538570671683.908'
     borrower_registration_form.borrower_dashboard.borrower_foreclosure_request.borrower_foreclosure: '1700465774321790534045777.5126'
     lendor_registration_form.dashboard.vblr.Borr_loan_request.RowTemplate11: '1700543062684858008325535.9921'
     admin.dashboard.manage_products.manage_producs1: '1700713086879771707093045.5188'
@@ -147,11 +146,13 @@ unique_ids:
     admin.dashboard.manage_settings.manage_roi: '1699529143824844026062899.4764'
     lendor_registration_form.Lender_reg_education_Intermediate: '1700756697390552428798704.9375'
     lendor_registration_form.dashboard.vlfr.RowTemplate32: '1704952273890916518019119.6376'
+    lendor_registration_form.dashboard.loan_disbursement: '1699960450618538570671683.908'
     admin.dashboard.loan_management.lapsed_loans.RowTemplate18: '1701266436393665505017274.7521'
     admin.dashboard.lenders.view_profile_copy.update_form_copy: '1700738460105764132450536.1031'
     admin.dashboard.borrowers.view_profile: '1699967781060728634256553.5089'
     admin.dashboard.borrowers.view_profile.edit_form: '169996780467215868230296.983032'
     lendor_registration_form.dashboard.lender_view_loans.RowTemplate23: '1703141182461211155517631.55914'
+    lendor_registration_form.dashboard.view_available_balance: '1699960014867483301520306.9306'
     ? borrower_registration_form.star_1_borrower_registration_form_begin_3.star_1_borrower_registration_form_begin_3b_business_3.star_1_borrower_registration_form_begin_3b_business_5
     : '17005720020403876226355.3249187'
     lendor_registration_form.dashboard.vler: '1699962962727731721010167.028'
@@ -181,7 +182,6 @@ unique_ids:
     admin.dashboard.admin_teams.view_profile: '1699528208717177568108194.0108'
     admin.dashboard.manage_products.add_product_categories_and_groups: '1701090290692291670903022.0623'
     admin.dashboard.loan_management.lapsed_loans: '1701265825793676423241044.7284'
-    lendor_registration_form.dashboard.opbal: '1699956535223911918554378.0013'
     admin.dashboard.manage_products.add_group: '1703758557054939760657519.5975'
     lendor_registration_form.dashboard.lender_view_loans.RowTemplate22: '1703141013007184309847389.77017'
     admin.dashboard.loan_management.closed_loans.view_profile_5: '1701079991010941258272977.0447'
