--- a/.anvil_editor.yaml
+++ b/.anvil_editor.yaml
@@ -20,7 +20,6 @@ unique_ids:
     borrower_registration_form.borrower_dashboard.borrower_foreclosure_request.RowTemplate6: '1700745206852325214857298.85956'
     borrower_registration_form.borrower_dashboard.application_tracker.RowTemplate1: '1698928474442141604886683.00064'
     admin.dashboard.loan_management.under_process.view_profile_3: '1700822875100967931908520.7759'
-    lendor_registration_form.dashboard.vep: '1699967210041830030429676.4268'
     borrower_registration_form.star_1_borrower_registration_form_begin: '1698229547916526360415191.1219'
     wallet.wallet: '1703489007387496965863254.889'
     lendor_registration_form.Lender_reg_form_2: '1699426727342910603650280.5131'
@@ -29,7 +28,6 @@ unique_ids:
     admin.dashboard.manage_reports: '1699528696451136679061767.8162'
     admin.user_issue.user_buganalysis.RowTemplate17: '1701189107287981500115093.1753'
     lendor_registration_form.dashboard.lender_view_loans.RowTemplate21: '1703140075771292076881029.6881'
-    lendor_registration_form.dashboard.vblr.RowTemplate10: '1700542200026541460267637.76886'
     lendor_registration_form.Lender_reg_form_4: '1700038033302654577889349.2847'
     borrower_registration_form.star_1_borrower_registration_form_begin_8: '1700161372617325052945266.5503'
     borrower_registration_form.borrower_dashboard.application_tracker: '1698927021026141533584098.39868'
@@ -49,6 +47,7 @@ unique_ids:
     admin.dashboard.loan_management.under_process: '1699528976374246220307697.87708'
     bank_users.main_form.contact_main_form: '1700563592845388062481880.76544'
     admin.dashboard.lenders: '1699528516670654865261457.5034'
+    lendor_registration_form.dashboard.view_or_send_notifications: '1699967294797596075787674.3921'
     ? borrower_registration_form.star_1_borrower_registration_form_begin_3.star_1_borrower_registration_form_begin_3b_business_3.star_1_borrower_registration_form_begin_3b_business_4
     : '1700571978274780031857795.3887'
     borrower_registration_form.borrower_dashboard.borrower_foreclosure_request.borrower_foreclosure.foreclose: '1700730776806358375111007.35254'
@@ -56,7 +55,6 @@ unique_ids:
     borrower_registration_form.borrower_dashboard.borrower_profile: '1698653519986110665503267.72595'
     admin.dashboard.lenders.view_profile_copy.edit_form_copy: '1700738442974165215211725.12378'
     lendor_registration_form.Toggleswitch: '1701335189405602120940903.774'
-    lendor_registration_form.dashboard.vblr.Borr_loan_request: '1700542763128106365112272.9714'
     admin.dashboard.admin_teams.view_profile.update_form: '169952839624818688697299.6676'
     lendor_registration_form.dashboard.today_dues.ItemTemplate1: '1703564885286922717800272.7809'
     borrower_registration_form.borrower_dashboard.application_tracker.view_profile: '1701144654092613273531448.6368'
@@ -67,34 +65,37 @@ unique_ids:
     lendor_registration_form.Lender_reg_Institutional_form_1: '1699429830924916000307655.0148'
     borrower_registration_form.star_1_borrower_registration_form_begin_3.star_1_borrower_registration_form_begin_3d: '1700037370196273229157101.42648'
     admin.dashboard.loan_management.default_loans: '1701349219800657114662317.6571'
+    lendor_registration_form.dashboard.view_lost_oppurtunities: '1699961316448706281090869.9006'
     wallet.wallet.all_transaction.RowTemplate29: '1704884931461492157927200.2286'
     lendor_registration_form.dashboard.edit_profile: '1701093412433606982932624.6844'
     borrower_registration_form.borrower_dashboard.borrower_view_loans.RowTemplate15: '1701149147768679142681951.7627'
+    lendor_registration_form.dashboard.view_loan_foreclosure_Requests.RowTemplate30: '1704950843840196993818177.19797'
     admin.dashboard.revenue_share: '1699529452988469665100106.9467'
+    lendor_registration_form.dashboard.view_borrower_loan_request: '1699960229158369964369354.56226'
     admin.dashboard.loan_management.loan_disbursed.view_profile_6: '1704878672712960872612311.6324'
     borrower_registration_form.borrower_dashboard.new_loan_request.check.RowTemplate27: '1704862271764988530792732.8186'
     bank_users.main_form.career_main_form: '1700563797991728540622095.9799'
+    lendor_registration_form.dashboard.view_loan_foreclosure_Requests: '169996304408474987603925.53683'
     admin.dashboard.loan_management.closed_loans.RowTemplate14: '1701079863491503664452804.4547'
     bank_users.main_form.products_main_form: '1700563558734712481921773.0997'
-    lendor_registration_form.dashboard.vlo.RowTemplate34: '1704968592298956121945816.4596'
     borrower_registration_form.borrower_dashboard.boorrower_edit_profile: '1698653709394569134493869.6183'
     borrower_registration_form.star_1_borrower_registration_form_begin_3.star_1_borrower_registration_form_begin_3e: '1700037622301754064674185.6132'
+    lendor_registration_form.dashboard.view_loan_foreclosure_Requests.RowTemplate32: '1704952273890916518019119.6376'
     lendor_registration_form.dashboard: '1699430548405125074156774.3141'
     lendor_registration_form.dashboard.notification: '1703490554376987971542588.1244'
     borrower_registration_form.star_1_borrower_registration_form_begin_2: '1698913206876177347227360.75858'
     admin.dashboard.manage_settings.manage_membership: '1699529102487124802777625.46121'
     admin.dashboard.manage_settings.manage_facts.facts_edit_form: '1699529302350939038086348.0267'
-    lendor_registration_form.dashboard.vlfr.foreclose_details_approved_and_rejected: '1701257788689491739663188.68726'
     admin.dashboard.admin_teams: '169952776924621765926770.255684'
     admin.dashboard.manage_products.view_categories: '1704370878451440341230872.3722'
     borrower_registration_form.borrower_dashboard.borrower_dashboard_about: '1701024263832190033852688.87518'
     lendor_registration_form.Lender_reg_bothdirect_bank_form_1: '1699429435323170866799491.21808'
-    lendor_registration_form.dashboard.vlfr: '169996304408474987603925.53683'
     borrower_registration_form.borrower_dashboard.borrower_today_dues.view_profile: '1701229021719749439077417.9918'
     borrower_registration_form.star_1_borrower_registration_form_begin_3.star_1_borrower_registration_form_begin_3b_student: '1700126702884606423685481.6467'
     bank_users.user_form.user_form_copy: '1700712538416515803210372.55963'
     admin.dashboard.borrowers.view_profile.update_form: '1699967990279922551849592.2898'
     borrower_registration_form.star_1_borrower_registration_form_begin_3.star_1_borrower_registration_form_begin_3c: '1699373440164759513719499.4375'
+    lendor_registration_form.dashboard.view_borrower_loan_request.RowTemplate10: '1700542200026541460267637.76886'
     admin.dashboard.manage_products.view_categories.ItemTemplate2: '1704371055344928457413512.8632'
     wallet.wallet.RowTemplate25: '1703498985331318465098761.16345'
     admin.dashboard.borrowers: '1699528468358308523806957.0701'
@@ -111,28 +112,27 @@ unique_ids:
     borrower_registration_form.borrower_dashboard.borrower_discount_coupons: '1699009614633438440466451.8109'
     admin.dashboard.loan_management.rejected_loans.RowTemplate8: '1700812073713245303231724.8567'
     bank_users.main_form.about_main_form: '1700562950795405574544713.0248'
-    lendor_registration_form.dashboard.vblr: '1699960229158369964369354.56226'
     lendor_registration_form.Lender_reg_individual_form_1: '169942903909778939193987.11401'
     admin.dashboard.admin_teams.view_profile.edit_form: '1699528319288104807163991.37613'
     lendor_registration_form.dashboard.lender_view_loans.RowTemplate20: '1703139972848360547706878.1784'
-    lendor_registration_form.dashboard.vlfr.foreclose_details: '1700454637827919052628054.0963'
     lendor_registration_form.Lender_reg_form_3: '1699427114774355019321073.1847'
     admin.user_issue.user_viewprofile: '1701187753190491873666760.6118'
     lendor_registration_form.dashboard.view_opening_balance: '1699956535223911918554378.0013'
     lendor_registration_form.dashboard.top_up_amount: '1699957883953144866963289.06934'
     lendor_registration_form.Lender_reg_individual_form_3: '1699429299471944361321501.9009'
+    lendor_registration_form.dashboard.view_borrower_loan_request.Borr_loan_request: '1700542763128106365112272.9714'
     lendor_registration_form.Lender_reg_bankdirect_bank_form_2: '1699429556412724511736888.3689'
     admin.dashboard.manage_products.view_product: '1700713112442254456792559.71744'
+    lendor_registration_form.dashboard.view_lost_oppurtunities.RowTemplate34: '1704968592298956121945816.4596'
     admin.dashboard.loan_management.closed_loans: '1699528886441906086843573.9337'
     lendor_registration_form.dashboard.today_dues: '1699961512859170838739966.79565'
-    lendor_registration_form.dashboard.vsn: '1699967294797596075787674.3921'
-    lendor_registration_form.dashboard.vlo: '1699961316448706281090869.9006'
     borrower_registration_form.star_1_borrower_registration_form_begin_3.star_1_borrower_registration_form_begin_3b_business_3: '1700126739765126145778650.8795'
     borrower_registration_form.borrower_dashboard.borrower_foreclosure_request.borrower_foreclosure: '1700465774321790534045777.5126'
-    lendor_registration_form.dashboard.vblr.Borr_loan_request.RowTemplate11: '1700543062684858008325535.9921'
     admin.dashboard.manage_products.manage_producs1: '1700713086879771707093045.5188'
+    lendor_registration_form.dashboard.view_or_download_portfolio: '1699963103625209878486803.42514'
     admin.dashboard.manage_cms: '1699528617179453409715572.5991'
     lendor_registration_form.Lender_reg_Institutional_form_3: '1699430137541808903451295.2183'
+    lendor_registration_form.dashboard.view_loan_foreclosure_Requests.foreclose_details: '1700454637827919052628054.0963'
     lendor_registration_form.Lender_reg_form_6: '1699427555218683419054191.9775'
     borrower_registration_form.borrower_dashboard.borrower_dashboard_contact: '1701024135120380095014250.6585'
     borrower_registration_form.borrower_dashboard.borrower_view_loans: '1699009593401243330903186.185'
@@ -141,33 +141,35 @@ unique_ids:
     borrower_registration_form.star_1_borrower_registration_form_begin_3.star_1_borrower_registration_form_begin_3a: '1699369123665164443906866.3994'
     bank_users.main_form: '1700479916868316718897361.56647'
     lendor_registration_form.Lender_reg_education_Mtech: '1700756951276419563635826.77423'
+    lendor_registration_form.dashboard.view_loan_foreclosure_Requests.RowTemplate31: '1704952246456255257681125.05264'
     admin.dashboard.manage_products.view_profile: '170072327892078386506068.2929'
     borrower_registration_form.star_1_borrower_registration_form_begin_9: '1700161464232284844778301.04285'
     admin.dashboard.manage_settings.manage_roi: '1699529143824844026062899.4764'
     lendor_registration_form.Lender_reg_education_Intermediate: '1700756697390552428798704.9375'
-    lendor_registration_form.dashboard.vlfr.RowTemplate32: '1704952273890916518019119.6376'
     lendor_registration_form.dashboard.loan_disbursement: '1699960450618538570671683.908'
     admin.dashboard.loan_management.lapsed_loans.RowTemplate18: '1701266436393665505017274.7521'
     admin.dashboard.lenders.view_profile_copy.update_form_copy: '1700738460105764132450536.1031'
     admin.dashboard.borrowers.view_profile: '1699967781060728634256553.5089'
     admin.dashboard.borrowers.view_profile.edit_form: '169996780467215868230296.983032'
+    lendor_registration_form.dashboard.view_loan_foreclosure_Requests.RowTemplate7: '1700215849908648465910279.8993'
     lendor_registration_form.dashboard.lender_view_loans.RowTemplate23: '1703141182461211155517631.55914'
     lendor_registration_form.dashboard.view_available_balance: '1699960014867483301520306.9306'
     ? borrower_registration_form.star_1_borrower_registration_form_begin_3.star_1_borrower_registration_form_begin_3b_business_3.star_1_borrower_registration_form_begin_3b_business_5
     : '17005720020403876226355.3249187'
-    lendor_registration_form.dashboard.vler: '1699962962727731721010167.028'
+    lendor_registration_form.dashboard.view_loan_extension_requests: '1699962962727731721010167.028'
     admin.dashboard.manage_products.view_product.RowTemplate5: '1700713251863745364072386.9193'
     admin.dashboard.manage_products.view_categories.editDetails: '1704371947758235068117859.1696'
+    lendor_registration_form.dashboard.view_loan_foreclosure_Requests.foreclose_details_approved_and_rejected: '1701257788689491739663188.68726'
     admin.dashboard.manage_products.view_products_and_categories.EditDetailsForm: '1704188499874537556678907.86676'
     lendor_registration_form.dashboard.lender_view_loans.payment_details_l.RowTemplate33: '1705114862680402556244096.2474'
     lendor_registration_form.dashboard.lender_view_loans.view_details_1: '1703138294370237056127607.49118'
     ? borrower_registration_form.star_1_borrower_registration_form_begin_3.star_1_borrower_registration_form_begin_3b_business_3.star_1_borrower_registration_form_begin_3b_business_1
     : '1700570064478378100736204.996'
     lendor_registration_form.Lender_reg_Institutional_form_2: '169943001612031275948388.34513'
-    lendor_registration_form.dashboard.vlfr.RowTemplate31: '1704952246456255257681125.05264'
     admin.user_issue.user_buganalysis: '170118773598944323523917.26369'
     admin.dashboard.manage_settings.manage_fee.fee_edit_form: '1699529229635822611582898.5063'
     admin.dashboard.risk_pool: '1699529482874413597143832.6982'
+    lendor_registration_form.dashboard.view_lost_oppurtunities.view_details_2: '1704969544196875847828406.0798'
     borrower_registration_form.borrower_dashboard.borrower_today_dues: '1699528449422864265737618.313'
     admin.dashboard.performance_tracker: '1701242878909114559440962.97266'
     lendor_registration_form.Lender_reg_form_1: '169816642062334728567639.0372'
@@ -185,13 +187,11 @@ unique_ids:
     admin.dashboard.manage_products.add_group: '1703758557054939760657519.5975'
     lendor_registration_form.dashboard.lender_view_loans.RowTemplate22: '1703141013007184309847389.77017'
     admin.dashboard.loan_management.closed_loans.view_profile_5: '1701079991010941258272977.0447'
-    lendor_registration_form.dashboard.vlfr.RowTemplate30: '1704950843840196993818177.19797'
+    lendor_registration_form.dashboard.view_borrower_loan_request.Borr_loan_request.RowTemplate11: '1700543062684858008325535.9921'
     wallet.wallet.all_transaction: '1704884604578852863514289.3086'
-    lendor_registration_form.dashboard.vlfr.RowTemplate7: '1700215849908648465910279.8993'
     admin.dashboard.borrowers.RowTemplate3: '1700662180254721391598758.9972'
     admin.dashboard.loan_management.approved_loans: '1699528799869373096001113.10925'
-    lendor_registration_form.dashboard.vdp: '1699963103625209878486803.42514'
-    lendor_registration_form.dashboard.vlo.view_details_2: '1704969544196875847828406.0798'
+    lendor_registration_form.dashboard.view_profile: '1699967210041830030429676.4268'
     admin.dashboard.loan_management.approved_loans.RowTemplate2: '1700739710762570959395619.5336'
     lendor_registration_form.Lender_reg_form_5: '1699427295488952628983490.9032'
     bank_users.main_form.location_main_form: '1700563664830830087586865.7502'
