--- a/client_code/lendor_registration_form/dashboard/view_borrower_loan_request/form_template.yaml
+++ b/client_code/lendor_registration_form/dashboard/view_borrower_loan_request/form_template.yaml
@@ -50,6 +50,7 @@ components:
     properties: {text: View Closed Loans}
     name: link_6
     layout_properties: {grid_position: 'XFZFTV,UTXMEO'}
+    event_bindings: {click: link_6_click}
   - type: Link
     properties: {text: View Loan Extension Requests}
     name: link_7
